# utah-2026-tax-changes

./: Makefile  pyproject.toml  reform.json
frontend/: next.config.js  package.json
frontend/__tests__/: AggregateImpact.test.tsx
frontend/app/: layout.tsx  robots.ts  sitemap.ts
frontend/app/(shell)/: page.tsx
frontend/components/: AggregateImpact.tsx  CongressionalDistrictImpact.tsx  DynamicDistrictMap.tsx  Footer.tsx  ImpactAnalysis.tsx  MapTypeToggle.tsx  PolicyOverview.tsx  USDistrictChoroplethMap.tsx
frontend/hooks/: useAggregateImpact.ts
frontend/lib/: api.ts  household.ts  types.ts
frontend/public/data/: congressional_districts.csv  distributional_impact.csv  income_brackets.csv  metrics.csv  winners_losers.csv
scripts/: _pipeline_worker.py  compute_impacts.py  generate_district_csv.py  modal_district_pipeline.py  modal_pipeline.py  pipeline.py
tests/: __init__.py  conftest.py  test_csv_data.py  test_household.py  test_reforms.py
ut_tax_calc/: __init__.py  household.py  microsimulation.py  reforms.py
